fixed some of the weird h1 spacing due to jump up change

--- a/styles/components/generic_section.css
+++ b/styles/components/generic_section.css
@@ -10,7 +10,7 @@
 .generic_section h1 {
   color: var(--clr-h1);
   font-size: var(--size-3xl);
-  margin-bottom: -1rem;
+  margin-bottom: -.75rem;
 }
 
 .generic_section h2 {
